// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`businessActions Dispatches the correct action and payload (autoClippersAddOne) 1`] = `
Array [
  Object {
    "type": "AUTO_CLIPPERS_ADD_ONE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (autoPaperclips) 1`] = `
Array [
  Object {
    "type": "AUTO_PAPERCLIPS",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (autoPaperclipsStart) 1`] = `
Array [
  Object {
    "type": "AUTO_PAPERCLIPS_START",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (buyWire) 1`] = `
Array [
  Object {
    "type": "BUY_WIRE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (checkButtons) 1`] = `
Array [
  Object {
    "type": "CHECK_BUTTONS",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (checkExistenceOfWire) 1`] = `
Array [
  Object {
    "type": "CHECK_EXISTENCE_OF_WIRE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (lowerPrice) 1`] = `
Array [
  Object {
    "type": "LOWER_PRICE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (makePaperclip) 1`] = `
Array [
  Object {
    "type": "MAKE_PAPERCLIP",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (marketing) 1`] = `
Array [
  Object {
    "type": "MARKETING",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (marketingNextLevel) 1`] = `
Array [
  Object {
    "type": "MARKETING_NEXT_LEVEL",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (raisePrice) 1`] = `
Array [
  Object {
    "type": "RAISE_PRICE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (randomWirePrice) 1`] = `
Array [
  Object {
    "type": "RANDOM_WIRE_PRICE",
    "value": 15,
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (sellPaperclips) 1`] = `
Array [
  Object {
    "type": "START_SELLING",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (setAutoClipperInitPrice) 1`] = `
Array [
  Object {
    "type": "SET_AUTO_CLIPPER_INIT_PRICE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (startBuyingWire) 1`] = `
Array [
  Object {
    "type": "START_BUYING_WIRE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (startUpdatingUnsoldInventory) 1`] = `
Array [
  Object {
    "type": "START_UPDATING_UNSOLD_INVENTORY",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (stop) 1`] = `
Array [
  Object {
    "type": "STOP",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (stopUpdatingUnsoldInventory) 1`] = `
Array [
  Object {
    "type": "STOP_UPDATING_UNSOLD_INVENTORY",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (toggleAutoClippersButton) 1`] = `
Array [
  Object {
    "type": "TOGGLE_AUTO_CLIPPERS_BUTTON",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (toggleMarketingButton) 1`] = `
Array [
  Object {
    "type": "TOGGLE_MARKETING_BUTTON",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (toggleMegaClippersButton) 1`] = `
Array [
  Object {
    "type": "TOGGLE_MEGA_CLIPPERS_BUTTON",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (toggleWireButton) 1`] = `
Array [
  Object {
    "type": "TOGGLE_WIRE_BUTTON",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (updateFunds) 1`] = `
Array [
  Object {
    "type": "UPDATE_FUNDS",
    "value": 5,
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (updateMaxPublicDemand) 1`] = `
Array [
  Object {
    "type": "UPDATE_MAX_PUBLIC_DEMAND",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (updatePublicDemand) 1`] = `
Array [
  Object {
    "type": "UPDATE_PUBLIC_DEMAND",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (updateUnsoldInventory) 1`] = `
Array [
  Object {
    "type": "UPDATE_UNSOLD_INVENTORY",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (wireExists) 1`] = `
Array [
  Object {
    "type": "WIRE_EXISTS",
    "val": true,
  },
]
`;
